# claude-list

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  dist.toml
.claude/hooks/: pre-submit-make-check.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
docs/: 2026-01-30-usability-improvements-design.md
docs/plans/: 2025-01-29-claude-list-design.md
specs/001-claude-list-cli/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-claude-list-cli/checklists/: requirements.md
specs/001-claude-list-cli/contracts/: README.md
specs/002-colored-output-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-colored-output-search/checklists/: requirements.md
specs/002-colored-output-search/contracts/: cli-command.md  color-module.md  search-module.md
specs/003-detailed-description/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-detailed-description/checklists/: requirements.md
specs/003-detailed-description/contracts/: detailed-output-format.md
specs/004-claude-directory-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-claude-directory-enhancement/checklists/: requirements.md
specs/004-claude-directory-enhancement/contracts/: cli.md  json-schema.md
src/: cli.rs  error.rs  info.rs  lib.rs  main.rs  output.rs
src/formatters/: compact.rs  detailed.rs  json.rs  mod.rs
src/parsers/: agents.rs  commands.rs  hooks.rs  mcp.rs  mod.rs  plugins.rs  sessions.rs  skills.rs
tests/: cli_test.rs
tests/fixtures/.claude/: mcp.json  session_history.json  settings.json
tests/fixtures/.claude/agents/: test-agent.md
tests/fixtures/.claude/commands/: gcoiter.md  gitacp.md
tests/fixtures/.claude/hooks/: test-hook.md
tests/fixtures/.claude/mcp-servers/test-mcp/: smithery.yaml
tests/fixtures/.claude/skills/test-skill/: skill.yaml
