[package]
name = "claude-list"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CLI tool for viewing installed plugins, skills, agents, and MCP servers in Claude Code"
license = "MIT"
authors = ["elliot <951376975@qq.com>"]
repository = "https://github.com/elliotxx/claude-list"
homepage = "https://github.com/elliotxx/claude-list"
documentation = "https://github.com/elliotxx/claude-list"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.0", features = ["yaml"] }
predicates = "3.0"
tempfile = "3.0"

[profile.release]
strip = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
opt-level = 3
strip = true

[badges]
github-actions = { repository = "elliotxx/claude-list", workflow = "CI" }

# cargo-dist configuration
[workspace.metadata.dist]
ci = ["github"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
installers = ["shell", "powershell"]
checksum = ["sha256"]
publish-jobs = ["crates-io"]
tag-name = "v{{version}}"
allow-dirty = false
pr-run-mode = "plan"

[workspace.metadata.dist.github-action-commits]
"actions/checkout" = "11bd71901bbe5b1630ceea73d27597364c9af683"
"actions/upload-artifact" = "4a6f16e7d1c1a2c2b4d5e3c7e5a8f0d9b6c4e2a8"
"actions/download-artifact" = "9c19b2e96b6421fb4a4a9e9e2d1b5c8e7f3a2b1c"
