[package]
name = "claude-list"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "CLI tool for viewing installed plugins, skills, agents, and MCP servers in Claude Code"
license = "MIT"
authors = ["elliot <951376975@qq.com>"]
repository = "https://github.com/elliotxx/claude-list"
homepage = "https://github.com/elliotxx/claude-list"
documentation = "https://github.com/elliotxx/claude-list"

[dependencies]
anstyle = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
unicode-width = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.0", features = ["yaml"] }
predicates = "3.0"
tempfile = "3.0"

[profile.release]
strip = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
opt-level = 3
strip = true

[badges]
github-actions = { repository = "elliotxx/claude-list", workflow = "CI" }

